log/build_2023-04-10_17-25-20/my_py_pkg/stderr.log
  File "/home/hoang/ros2_ws/install/my_py_pkg/lib/python3.10/site-packages/my_py_pkg/my_first_node.py", line 14
    self.get_logger().info(str(self.counter_) "and counting")
                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

